<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/backBtn"
        android:onClick="BackBtnOnClick" />

    <!-- NAME -->

    <EditText
        android:id="@+id/nameText"
        android:hint="@string/nameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/inputFontSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />

    <!-- DESCRIPTION -->

    <EditText
        android:id="@+id/descriptionText"
        android:hint="@string/descriptionLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines = "5"
        android:textSize="@dimen/inputFontSize"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- TYPE -->
    <Spinner
        android:id="@+id/typeText"
        android:hint="@string/typeLabel"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:entries="@array/typelist"
        android:textSize="@dimen/inputFontSize"
        android:layout_below="@+id/descriptionText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subBtn"
        android:onClick="SubBtnOnClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>