<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/transparent">

    <Button
        android:id="@+id/reportBtn"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="ReportBtnOnClick"
        android:text="@string/reportText"
        android:textSize="@dimen/reportFontSize"/>

    <TextView
        android:id="@+id/infoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/infoNameSize"
        android:text="@string/markername"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/reportBtn"/>

    <TextView
        android:id="@+id/infoDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/inputFontSize"
        android:text="@string/markerdesc"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/infoName"/>

    <TextView
        android:id="@+id/infoType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/inputFontSize"
        android:text="@string/markertype"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/infoDesc"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/infoType"
        android:onClick="ImageOnClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:text="@string/editText"
        android:onClick="EditBtnOnClick"/>


</RelativeLayout>